fix: improve tags overflow

--- a/src/app.css
+++ b/src/app.css
@@ -171,6 +171,21 @@
             content: ", ";
         }
 
+.tags-wrapper {
+    max-height: 56px;
+    overflow-y: scroll;
+}
+
+.tags-wrapper::-webkit-scrollbar {
+        width: 2px;
+    }
+
+/* overwrite stupid spotify styling */
+
+html {
+    scrollbar-color: auto !important;
+}
+
 /*@tailwind base;*/
 
 /*@tailwind components;*/
@@ -222,10 +237,6 @@
 
 .mb-auto {
     margin-bottom: auto;
-}
-
-.mt-2 {
-    margin-top: 0.5rem;
 }
 
 .line-clamp-3 {
@@ -372,10 +383,6 @@
     border-style: solid;
 }
 
-.border-none {
-    border-style: none;
-}
-
 .border-\[var\(--essential-warning\)\] {
     border-color: var(--essential-warning);
 }
@@ -494,16 +501,6 @@
 
 .hover\:underline:hover {
     text-decoration-line: underline;
-}
-
-.hover\:brightness-150:hover {
-    --tw-brightness: brightness(1.5);
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.focus\:brightness-150:focus {
-    --tw-brightness: brightness(1.5);
-    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .\[\&_svg\]\:absolute svg {
